<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView02"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="insideOverlay">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/NuevaOferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.chris.sipho.NewOffActivity">


        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategoria" />

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/selecciona_la_categoria"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/nombra_tu_oferta"
            android:inputType="text"
            android:maxLength="30"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spCategoria" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="296dp"
            android:layout_height="126dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/describe_la_oferta"
            android:inputType="textMultiLine"
            android:maxLength="140"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPrecio" />

        <EditText
            android:id="@+id/editTextPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/precio"
            android:inputType="number"
            android:maxLength="9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

        <Button
            android:id="@+id/buttonChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:drawableStart="@drawable/ic_menu_gallery"
            android:text="@string/subir_de_galeria"
            app:layout_constraintBottom_toTopOf="@+id/imageViewNewOff"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion"
            tools:layout_editor_absoluteY="252dp" />

        <Button
            android:id="@+id/buttonChooseCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/subir_de_camara"
            app:layout_constraintBottom_toTopOf="@+id/imageViewNewOff"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion" />

        <ImageView
            android:id="@+id/imageViewNewOff"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/buttonPrevisualizar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" android:contentDescription="@string/todo" />


        <Button
            android:id="@+id/buttonPrevisualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previsualizar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/buttonCancelarOferta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="271dp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>